force-app/main/default/objects/Opportunity/fields/Contract_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Contract_Attempts__c</fullName>
    <description>Nombre de tentatives d envoi du contrat DocuSign.</description>
    <label>Contract Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>