force-app/main/default/objects/Opportunity/fields/Contract_Error__c.field-meta.xml
<CustomField>
    <fullName>Contract_Error__c</fullName>
    <label>Contract Error</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>