force-app/main/default/objects/Opportunity/fields/Contract_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_At__c</fullName>
    <label>Contract Sent At</label>
    <type>DateTime</type>
</CustomField>