force-app/main/default/objects/Opportunity/fields/Contract_Signed_At__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_At__c</fullName>
    <label>Contract Signed At</label>
    <type>DateTime</type>
</CustomField>