force-app/main/default/objects/Opportunity/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>Statut du cycle de signature du contrat.</description>
    <label>Contract Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>