force-app/main/default/objects/Opportunity/fields/Contract_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Template_Id__c</fullName>
    <description>Template DocuSign a utiliser pour ce contrat (optionnel).</description>
    <label>Contract Template Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>