force-app/main/default/objects/Opportunity/fields/Description_Poste__c.field-meta.xml
<CustomField>
    <fullName>Description_Poste__c</fullName>
    <description>Description détaillée de la position/offre d'emploi</description>
    <label>Description Poste</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>