force-app/main/default/objects/Opportunity/fields/DocuSign_Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Id__c</fullName>
    <description>Identifiant envelope DocuSign associe au contrat.</description>
    <label>DocuSign Envelope Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>