force-app/main/default/objects/Opportunity/fields/Gaming_Meet_Link__c.field-meta.xml
<CustomField>
    <fullName>Gaming_Meet_Link__c</fullName>
    <description>Lien du test Gaming</description>
    <label>Lien Meet Gaming</label>
    <type>Url</type>
</CustomField>