force-app/main/default/objects/Opportunity/fields/Gaming_Test_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Gaming_Test_DateTime__c</fullName>
    <description>Date et heure du test Gaming planifié</description>
    <label>Date du test Gaming</label>
    <type>DateTime</type>
</CustomField>