force-app/main/default/objects/Opportunity/fields/Gaming_Test_Duration__c.field-meta.xml
<CustomField>
    <fullName>Gaming_Test_Duration__c</fullName>
    <description>Durée du test Gaming en minutes</description>
    <label>Durée du test (min)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>30</fullName><default>false</default><label>30 min</label></value>
            <value><fullName>60</fullName><default>true</default><label>1 heure</label></value>
            <value><fullName>90</fullName><default>false</default><label>1h30</label></value>
            <value><fullName>120</fullName><default>false</default><label>2 heures</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>