force-app/main/default/objects/Opportunity/fields/Gaming_Test_Score__c.field-meta.xml
<CustomField>
    <fullName>Gaming_Test_Score__c</fullName>
    <description>Score obtenu au test Gaming (0-100)</description>
    <label>Score Test Gaming</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>