force-app/main/default/objects/Opportunity/fields/Gaming_Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Gaming_Test_Status__c</fullName>
    <description>Statut du test Gaming : Pending, Completed</description>
    <label>Statut Test Gaming</label>
    <length>50</length>
    <type>Text</type>
</CustomField>