force-app/main/default/objects/Opportunity/fields/Is_Candidature__c.field-meta.xml
<CustomField>
    <fullName>Is_Candidature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True si cette Opportunity est une candidature (créée par conversion Lead). False si c'est une offre d'emploi Job Posting.</description>
    <label>Est une Candidature</label>
    <type>Checkbox</type>
</CustomField>