force-app/main/default/objects/Opportunity/fields/Localisation__c.field-meta.xml
<CustomField>
    <fullName>Localisation__c</fullName>
    <description>Localisation géographique du poste</description>
    <label>Localisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>