force-app/main/default/objects/Opportunity/fields/Manager_Validated_Score__c.field-meta.xml
<CustomField>
    <fullName>Manager_Validated_Score__c</fullName>
    <label>Score Validé par Manager</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>