force-app/main/default/objects/Opportunity/fields/Salaire_Propos__c.field-meta.xml
<CustomField>
    <fullName>Salaire_Propos__c</fullName>
    <description>Salaire proposé pour le poste</description>
    <label>Salaire Proposé</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>