force-app/main/default/objects/Opportunity/fields/Type_de_Contrat__c.field-meta.xml
<CustomField>
    <fullName>Type_de_Contrat__c</fullName>
    <description>Type de contrat offert (CDI, CDD, Stage, etc.)</description>
    <label>Type de Contrat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>