force-app/main/default/objects/Opportunity/recordTypes/Application.recordType-meta.xml
<RecordType>
    <fullName>Application</fullName>
    <active>true</active>
    <businessProcess>HR_Talent_Process</businessProcess>
    <description>Candidatures soumises via le portail RH</description>
    <label>Application</label>
</RecordType>