force-app/main/default/objects/Opportunity/recordTypes/Job_Posting.recordType-meta.xml
<RecordType>
    <fullName>Job_Posting</fullName>
    <active>true</active>
    <businessProcess>HR_Talent_Process</businessProcess>
    <description>Offres d'emploi publiées sur le portail RH</description>
    <label>Job Posting</label>
</RecordType>